# BirthdayCalendar

./: .dockerignore  .env.example  .gitignore  BirthdayCalendar.code-workspace  Dockerfile  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: docker-image.yml
backend/: CMakeLists.txt  CMakePresets.json
backend/src/: main.cpp  models.h
backend/src/notifiers/: file.cpp  file.h  notifier.h  smtp.cpp  smtp.h
backend/src/services/: auth.cpp  auth.h  birthday_server.cpp  birthday_server.h  config.cpp  config.h  ical.cpp  ical.h  ical_feed.cpp  ical_feed.h  notifierfactory.cpp  notifierfactory.h  vcard.cpp  vcard.h  vcard_feed.cpp  vcard_feed.h  vcard_workflow.cpp  vcard_workflow.h
backend/src/utils/: file.cpp  file.h  text.cpp  text.h
frontend/: auth.html  index.html  package-lock.json  package.json  vite.auth.config.js  vite.config.js
frontend/src/: App.svelte  Auth.svelte  app.css  auth-main.js
storage/demo-ical/: birthdays.ics
